Remove legacy protos
